Jdk19 (#19)
* update maven plugins

* fix deprecation usage

* RecordPatterns

* StructuredConcurrencyTest

* StructuredConcurrencyTest

* improved RecordPatternsTest

* adding VirtualThreadsTest

* improving RecordPatternsTest

* small clean-up on structured concurrency

* missing JDK15 features

* fix of code snippet

* adding heavier virtual threads test

---------

Co-authored-by: Piotr Szerszeń <SzerPMSC@qiagen.onmicrosoft.com>