@@ -10,9 +10,6 @@
 
   <properties>
     <java.version>20</java.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>${java.version}</maven.compiler.source>
-    <maven.compiler.target>${java.version}</maven.compiler.target>
     <junit-jupiter.version>5.9.3</junit-jupiter.version>
     <annotations.version>24.0.1</annotations.version>
     <slf4j.version>2.0.7</slf4j.version>
@@ -43,6 +40,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>5.3.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <version>${assertj.version}</version>
@@ -56,9 +59,12 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
-          <compilerArgs>--enable-preview</compilerArgs>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
+          <compilerArgs>
+            <arg>--add-modules=jdk.incubator.concurrent</arg>
+            <arg>--enable-preview</arg>
+          </compilerArgs>
         </configuration>
         <version>3.11.0</version>
       </plugin>
@@ -67,7 +73,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0</version>
         <configuration>
-          <argLine>--enable-preview</argLine>
+          <argLine>--enable-preview --add-modules=jdk.incubator.concurrent</argLine>
         </configuration>
       </plugin>
     </plugins>
